--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,6 @@
     padding-top: 70px;
 }
 
-.container-fluid {
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-}
-
 .card {
     height: 280px;
     background: #1a1a1a;
@@ -75,6 +69,21 @@
     bottom: 25px;
     left: 50%;
     transform: translateX(-50%);
+}
+
+.startBtn {
+    border: 1px solid #fff;
+    border-radius: 3px;
+    background: transparent;
+    color: #fff;
+    font-family: Cinzel Decorative;
+    font-weight: 600;
+    padding: 5px 15px;
+}
+
+.center {
+    text-align: center;
+    padding: 40px 0;
 }
 
 .selectBtn:hover {
