--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,6 @@
     display: block;
     padding: 2%;
     margin: 1% 0 1% 0;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     width: 100%;
     margin: 20px 0;
 }
@@ -94,4 +93,51 @@
 .birth {
     color: #fff;
     font-size: 12px;
+}
+
+
+/* GAME */
+
+.playerOneArea,
+.playerTwoArea {
+    background: #000;
+    height: 100vh;
+    width: 15%;
+    display: inline-block;
+    text-align: center;
+}
+
+.playerOneArea {
+    float: left;
+}
+
+.playerTwoArea {
+    float: right;
+}
+
+.board {
+    width: 100%;
+    height: 100vh;
+    background: #1a1a1a;
+    display: inline-block;
+}
+
+.stop-scrolling {
+    height: 100%;
+    overflow: hidden;
+}
+
+.playerTitle,
+.playerChar {
+    font-size: 20px;
+    font-family: Cinzel Decorative;
+    color: #fff;
+    font-weight: 600;
+    padding-top: 20px;
+}
+
+.playerChar {
+    font-weight: 400;
+    padding-top: 10px;
+    font-size: 16px;
 }
