--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@
     font-size: 16px;
     background: transparent;
     font-family: Cinzel Decorative;
+    font-weight: 700;
 }
 
 .main__btn:hover {
@@ -168,12 +169,23 @@
 
 /* CHAR SELECT */
 
+#boardLogoChar {
+    width: 200px;
+    margin: 10px 0;
+}
+
 .flex-row {
     display: flex;
     width: 100%;
     align-items: center;
     text-align: center;
     flex-wrap: wrap;
+}
+
+#select__char,
+#born,
+#gender {
+    display: none;
 }
 
 .charCard {
@@ -186,7 +198,7 @@
     margin: 20px 20px 20px 0;
     color: #fff;
     font-family: Cinzel Decorative;
-    padding: 30px 0;
+    padding: 34px 20px;
 }
 
 .charCard.selected {
@@ -241,7 +253,6 @@
 .char__title {
     font-size: 16px;
     font-family: Open Sans;
-    padding: 30px 0;
 }
 
 .char__select {
@@ -259,6 +270,11 @@
     cursor: pointer;
 }
 /* GAME */
+
+#boardLogoGame {
+    width: 200px;
+    margin: 20px auto 40px auto;
+}
 
 .playerOneArea,
 .playerTwoArea {
@@ -302,4 +318,278 @@
     font-weight: 400;
     padding-top: 10px;
     font-size: 16px;
+}
+
+.rollArea {
+    width: 100%;
+    height: 100%;
+    height: 100vh;
+    background: #000;
+    text-align: center;
+    padding-top: 60px;
+}
+
+#rollOne,
+#rollTwo {
+    display: block;
+    background: transparent;
+    border: 1px solid #fff;
+    font-family: Cinzel Decorative;
+    color: #fff;
+    padding: 10px 15px;
+    border-radius: 3px;
+    z-index: 999;
+    font-weight: 700;
+    margin: 0 auto;
+}
+
+#rollOne:hover,
+#rollTwo:hover {
+    background: #fff;
+    color: #000;
+    cursor: pointer;
+}
+
+#rollDesc {
+    color: #fff;
+    font-family: Cinzel Decorative;
+    font-size: 16px;
+    padding: 10px 0;
+    display: none;
+}
+
+#rollIsSix {
+    color: green;
+    font-family: Cinzel Decorative;
+}
+
+/****
+DICE
+*****/
+
+#diceRoll {
+    width: 100px;
+    height: 100px;
+    border: 1px solid #fff;
+    border-radius: 10px;
+    margin: 40px auto;
+}
+
+.score {
+    font-size: 16px;
+    font-family: Cinzel Decorative;
+    color: #fff;
+}
+
+.scoreHR {
+    border: 1px solid #fff;
+    width: 30%;
+}
+
+
+/* 
+GZ
+*/
+
+#playAgain {
+    background: transparent;
+    border: 1px solid #fff;
+    font-family: Cinzel Decorative;
+    color: #fff;
+    margin: 150px 0;
+    padding: 10px 25px;
+    font-weight: 700;
+}
+
+#playAgain:hover {
+    background: #fff;
+    color: #000;
+    cursor: pointer;
+}
+.sp-container {
+    width: 1140px;
+}
+
+.sp-container h2 {
+	position: absolute;
+	top: 50%;
+	margin-top: -50px;
+	font-size: 90px;
+	width: 100%;
+	text-align: center;
+    color: transparent;
+    font-size: 40px;
+    font-family: Cinzel Decorative;
+    font-weight: 700;
+	-webkit-animation: blurFadeInOut 3s ease-in backwards;
+	-moz-animation: blurFadeInOut 3s ease-in backwards;
+	-ms-animation: blurFadeInOut 3s ease-in backwards;
+	animation: blurFadeInOut 3s ease-in backwards;
+}
+.sp-container h2.frame-1 {
+    width: 100%;
+	-webkit-animation-delay: 0s;
+	-moz-animation-delay: 0s;
+	-ms-animation-delay: 0s;
+	animation-delay: 0s;
+}
+.sp-container h2.frame-2 {
+    width: 100%;
+	-webkit-animation-delay: 3s;
+	-moz-animation-delay: 3s;
+	-ms-animation-delay: 3s;
+	animation-delay: 3s;
+}
+.sp-container h2.frame-3 {
+    width: 100%;
+	-webkit-animation-delay: 6s;
+	-moz-animation-delay: 6s;
+	-ms-animation-delay: 6s;
+	animation-delay: 6s;
+}
+
+
+@-webkit-keyframes blurFadeInOut {
+	0% {
+		opacity: 0;
+		text-shadow: 0px 0px 40px #fff;
+		-webkit-transform: scale(1.3);
+	}
+	20%, 75% {
+		opacity: 1;
+		text-shadow: 0px 0px 1px #fff;
+		-webkit-transform: scale(1);
+	}
+	100% {
+		opacity: 0;
+		text-shadow: 0px 0px 50px #fff;
+		-webkit-transform: scale(0);
+	}
+}
+@-webkit-keyframes blurFadeIn {
+	0% {
+		opacity: 0;
+		text-shadow: 0px 0px 40px #fff;
+		-webkit-transform: scale(1.3);
+	}
+	50% {
+		opacity: 0.5;
+		text-shadow: 0px 0px 10px #fff;
+		-webkit-transform: scale(1.1);
+	}
+	100% {
+		opacity: 1;
+		text-shadow: 0px 0px 1px #fff;
+		-webkit-transform: scale(1);
+	}
+}
+
+
+/**/
+
+@-moz-keyframes blurFadeInOut {
+	0% {
+		opacity: 0;
+		text-shadow: 0px 0px 40px #fff;
+		-moz-transform: scale(1.3);
+	}
+	20%, 75% {
+		opacity: 1;
+		text-shadow: 0px 0px 1px #fff;
+		-moz-transform: scale(1);
+	}
+	100% {
+		opacity: 0;
+		text-shadow: 0px 0px 50px #fff;
+		-moz-transform: scale(0);
+	}
+}
+@-moz-keyframes blurFadeIn {
+	0% {
+		opacity: 0;
+		text-shadow: 0px 0px 40px #fff;
+		-moz-transform: scale(1.3);
+	}
+	100% {
+		opacity: 1;
+		text-shadow: 0px 0px 1px #fff;
+		-moz-transform: scale(1);
+	}
+}
+
+/**/
+
+@keyframes blurFadeInOut {
+	0% {
+		opacity: 0;
+		text-shadow: 0px 0px 40px #fff;
+		transform: scale(1.3);
+	}
+	20%, 75% {
+		opacity: 1;
+		text-shadow: 0px 0px 1px #fff;
+		transform: scale(1);
+	}
+	100% {
+		opacity: 0;
+		text-shadow: 0px 0px 50px #fff;
+		transform: scale(0);
+	}
+}
+@keyframes blurFadeIn {
+	0% {
+		opacity: 0;
+		text-shadow: 0px 0px 40px #fff;
+		transform: scale(1.3);
+	}
+	50% {
+		opacity: 0.5;
+		text-shadow: 0px 0px 10px #fff;
+		transform: scale(1.1);
+	}
+	100% {
+		opacity: 1;
+		text-shadow: 0px 0px 1px #fff;
+		transform: scale(1);
+	}
+}
+
+/* MOBILE */
+
+@media screen and (max-width: 900px) {
+    #boardLogo {
+        width: 100%;
+    }
+
+    .main__title--large {
+        font-size: 42px;
+    }
+
+    .bottom__row {
+        width: 100%;
+    }
+
+    .bottom__row .col-sm-6 {
+        display: inline-block;
+        width: 50%;
+        bottom: 10px;
+    }
+
+    .row .col-sm-6 {
+        display: inline-block;
+        width: 50%;
+        margin-bottom: 20px;
+    }
+
+    .mainStart .container .row .col-sm-12 {
+        text-align: center;
+        margin: 20px 0;
+    }
+
+    .charCard {
+        width: 50px;
+        height: 75px;
+        padding: 10px;
+        font-size: 12px;
+    }
 }
